tests/invalid/runtime/index_get_string_oob_emoji.pts
import Io;

function main() : void {
    string s = "a😀b";
    glyph g = s[3];
    Io.printLine(g.toString());
}
